--- a/series.conf
+++ b/series.conf
@@ -12666,6 +12666,7 @@
 	patches.suse/sfc-Add-a-basic-Siena-module.patch
 	patches.suse/siena-Make-MTD-support-specific-for-Siena.patch
 	patches.suse/siena-Make-SRIOV-support-specific-for-Siena.patch
+	patches.suse/siena-Make-HWMON-support-specific-for-Siena.patch
 	patches.suse/usbnet-Run-unregister_netdev-before-unbind-again.patch
 	patches.suse/usbnet-smsc95xx-Don-t-clear-read-only-PHY-interrupt.patch
 	patches.suse/usbnet-smsc95xx-Avoid-link-settings-race-on-interrup.patch
