--- a/series.conf
+++ b/series.conf
@@ -12683,6 +12683,7 @@
 	patches.suse/qed-Remove-unnecessary-synchronize_irq-before-free_i.patch
 	patches.suse/net-qede-Remove-unnecessary-synchronize_irq-before-f.patch
 	patches.suse/octeontx2-pf-Add-support-for-adaptive-interrupt-coal.patch
+	patches.suse/sfc-siena-Have-a-unique-wrapper-ifndef-for-efx-chann.patch
 	patches.suse/cfg80211-declare-MODULE_FIRMWARE-for-regulatory.db.patch
 	patches.suse/mac80211-upgrade-passive-scan-to-active-scan-on-DFS-.patch
 	patches.suse/wilc1000-fix-crash-observed-in-AP-mode-with-cfg80211.patch
