--- a/series.conf
+++ b/series.conf
@@ -6557,6 +6557,7 @@
 	patches.suse/staging-wlan-ng-Avoid-bitwise-vs-logical-OR-warning-.patch
 	patches.suse/staging-use-eth_hw_addr_set.patch
 	patches.suse/staging-use-eth_hw_addr_set-instead-of-ether_addr_co.patch
+	patches.suse/staging-use-eth_hw_addr_set-for-dev-addr_len-cases.patch
 	patches.suse/staging-rtl8712-fix-use-after-free-in-rtl8712_dl_fw.patch
 	patches.suse/staging-rtl8192u-fix-control-message-timeouts.patch
 	patches.suse/staging-r8712u-fix-control-message-timeout.patch
