--- a/series.conf
+++ b/series.conf
@@ -9152,6 +9152,7 @@
 	patches.suse/RDMA-bnxt_re-Remove-dynamic-pkey-table.patch
 	patches.suse/RDMA-mlx4-Use-bitmap_alloc-when-applicable.patch
 	patches.suse/RDMA-bnxt_re-Use-bitmap_zalloc-when-applicable.patch
+	patches.suse/RDMA-siw-Use-max-instead-of-doing-it-manually.patch
 	patches.suse/RDMA-hns-Modify-the-mapping-attribute-of-doorbell-to.patch
 	patches.suse/RDMA-uverbs-Remove-the-unnecessary-assignment.patch
 	patches.suse/RDMA-bnxt_re-Fix-endianness-warning-for-req.pkey.patch
