--- a/series.conf
+++ b/series.conf
@@ -9148,6 +9148,7 @@
 	patches.suse/RDMA-cxgb4-Use-non-atomic-bitmap-functions-when-poss.patch
 	patches.suse/RDMA-cma-Remove-open-coding-of-overflow-checking-for.patch
 	patches.suse/RDMA-rtrs-clt-Fix-the-initial-value-of-min_latency.patch
+	patches.suse/RDMA-siw-Use-helper-function-to-set-sys_image_guid.patch
 	patches.suse/RDMA-bnxt_re-Remove-dynamic-pkey-table.patch
 	patches.suse/RDMA-bnxt_re-Use-bitmap_zalloc-when-applicable.patch
 	patches.suse/RDMA-hns-Modify-the-mapping-attribute-of-doorbell-to.patch
