--- a/series.conf
+++ b/series.conf
@@ -8516,6 +8516,7 @@
 	patches.suse/net-annotate-accesses-to-dev-gso_max_size.patch
 	patches.suse/net-annotate-accesses-to-dev-gso_max_segs.patch
 	patches.suse/msft-hv-2484-net-mana-Add-XDP-support.patch
+	patches.suse/qed-Use-the-bitmap-API-to-simplify-some-functions.patch
 	patches.suse/msft-hv-2485-hv_netvsc-Use-bitmap_zalloc-when-applicable.patch
 	patches.suse/devlink-Add-enable_iwarp-generic-device-param.patch
 	patches.suse/net-ice-Add-support-for-enable_iwarp-and-enable_roce.patch
