--- a/series.conf
+++ b/series.conf
@@ -9133,6 +9133,7 @@
 	patches.suse/genirq-Provide-new-interfaces-for-affinity-hints.patch
 	patches.suse/be2net-Use-irq_update_affinity_hint.patch
 	patches.suse/scsi-lpfc-Use-irq_set_affinity.patch
+	patches.suse/net-mlx4-Use-irq_update_affinity_hint.patch
 	patches.suse/irqchip-gic-v4-Disable-redistributors-view-of-the-VP.patch
 	patches.suse/clocksource-drivers-exynos_mct-Refactor-resources-al.patch
 	patches.suse/clocksource-Avoid-accidental-unstable-marking-of-clo.patch
