--- a/series.conf
+++ b/series.conf
@@ -13974,6 +13974,7 @@
 	patches.suse/intel-remove-unused-macros.patch
 	patches.suse/intel-e1000e-fix-repeated-words-in-comments.patch
 	patches.suse/ethernet-emulex-fix-repeated-words-in-comments.patch
+	patches.suse/cxgb4-Fix-typo-in-string.patch
 	patches.suse/bnxt-Use-the-bitmap-API-to-allocate-bitmaps.patch
 	patches.suse/cnic-Use-the-bitmap-API-to-allocate-bitmaps.patch
 	patches.suse/ath10k-do-not-enforce-interrupt-trigger-type.patch
