--- a/series.conf
+++ b/series.conf
@@ -5665,6 +5665,7 @@
 	patches.suse/hostap-use-eth_hw_addr_set.patch
 	patches.suse/wilc1000-use-eth_hw_addr_set.patch
 	patches.suse/ray_cs-use-eth_hw_addr_set.patch
+	patches.suse/wl3501_cs-use-eth_hw_addr_set.patch
 	patches.suse/mt76-mt7921-fix-endianness-in-mt7921_mcu_tx_done_eve.patch
 	patches.suse/mt76-mt7915-fix-endianness-warning-in-mt7915_mac_add.patch
 	patches.suse/mt76-mt7921-fix-endianness-warning-in-mt7921_update_.patch
