--- a/series.conf
+++ b/series.conf
@@ -5305,6 +5305,7 @@
 	patches.suse/net-usb-use-eth_hw_addr_set.patch
 	patches.suse/net-use-eth_hw_addr_set-instead-of-ether_addr_copy.patch
 	patches.suse/ethernet-use-eth_hw_addr_set-instead-of-ether_addr_c.patch
+	patches.suse/net-usb-use-eth_hw_addr_set-instead-of-ether_addr_co.patch
 	patches.suse/ethernet-chelsio-use-eth_hw_addr_set.patch
 	patches.suse/net-mlx4_en-avoid-one-cache-line-miss-to-ring-doorbe.patch
 	patches.suse/qed-Fix-kernel-doc-warnings.patch
