--- a/series.conf
+++ b/series.conf
@@ -9160,6 +9160,7 @@
 	patches.suse/RDMA-qedr-Fix-reporting-max_-send-recv-_wr-attrs.patch
 	patches.suse/RDMA-core-Let-ib_find_gid-continue-search-even-after.patch
 	patches.suse/RDMA-cma-Let-cma_resolve_ib_dev-continue-search-even.patch
+	patches.suse/iw_cxgb4-Use-memset_startat-for-cpl_t5_pass_accept_r.patch
 	patches.suse/RDMA-rxe-Fix-a-typo-in-opcode-name.patch
 	patches.suse/RDMA-cxgb4-Set-queue-pair-state-when-being-queried.patch
 	patches.suse/IB-mlx5-Expose-NDR-speed-through-MAD.patch
