--- a/series.conf
+++ b/series.conf
@@ -764,6 +764,7 @@
 	patches.suse/net-mlx5e-Remove-redundant-assignment-of-counter-to-.patch
 	patches.suse/net-mlx5e-Return-EOPNOTSUPP-if-more-relevant-when-pa.patch
 	patches.suse/net-mlx5-Fix-missing-return-value-in-mlx5_devlink_es.patch
+	patches.suse/skbuff-introduce-skb_expand_head.patch
 	patches.suse/qed-Avoid-db_recovery-during-recovery.patch
 	patches.suse/qed-Skip-DORQ-attention-handling-during-recovery.patch
 	patches.suse/qed-Remove-redundant-prints-from-the-iWARP-SYN-handl.patch
