--- a/series.conf
+++ b/series.conf
@@ -5482,6 +5482,7 @@
 	patches.suse/ice-Implement-support-for-SMA-and-U.FL-on-E810-T.patch
 	patches.suse/ethernet-constify-references-to-netdev-dev_addr-in-d.patch
 	patches.suse/ethernet-make-eth_hw_addr_random-use-dev_addr_set.patch
+	patches.suse/ethernet-make-use-of-eth_hw_addr_random-where-approp.patch
 	patches.suse/net-phy-micrel-make-skew-ps-check-more-lenient.patch
 	patches.suse/msft-hv-2454-hv_netvsc-Add-comment-of-netvsc_xdp_xmit.patch
 	patches.suse/net-fealnx-fix-build-for-UML.patch
