--- a/series.conf
+++ b/series.conf
@@ -8503,6 +8503,7 @@
 	patches.suse/ipw2200-constify-address-in-ipw_send_adapter_address.patch
 	patches.suse/amd-lance-use-eth_hw_addr_set.patch
 	patches.suse/amd-ni65-use-eth_hw_addr_set.patch
+	patches.suse/amd-a2065-ariadne-use-eth_hw_addr_set.patch
 	patches.suse/bnx2x-Use-struct_group-for-memcpy-region.patch
 	patches.suse/bnx2x-constify-static-inline-stub-for-dev_addr.patch
 	patches.suse/ethtool-add-support-to-set-get-rx-buf-len-via-ethtoo.patch
