--- a/series.conf
+++ b/series.conf
@@ -8521,6 +8521,7 @@
 	patches.suse/devlink-Add-enable_iwarp-generic-device-param.patch
 	patches.suse/net-ice-Add-support-for-enable_iwarp-and-enable_roce.patch
 	patches.suse/RDMA-irdma-Set-protocol-based-on-PF-rdma_mode-flag.patch
+	patches.suse/cxgb4-allow-reading-unrecognized-port-module-eeprom.patch
 	patches.suse/net-stmmac-perserve-TX-and-RX-coalesce-value-during-.patch
 	patches.suse/net-dsa-ocelot-seville-utilize-of_mdiobus_register.patch
 	patches.suse/devlink-Remove-misleading-internal_flags-from-health.patch
