--- a/series.conf
+++ b/series.conf
@@ -5622,6 +5622,7 @@
 	patches.suse/usb-smsc-use-eth_hw_addr_set.patch
 	patches.suse/net-qmi_wwan-use-dev_addr_mod.patch
 	patches.suse/net-usb-don-t-write-directly-to-netdev-dev_addr.patch
+	patches.suse/fddi-defxx-defza-use-dev_addr_set.patch
 	patches.suse/cfg80211-always-free-wiphy-specific-regdomain.patch
 	patches.suse/b43legacy-fix-a-lower-bounds-test.patch
 	patches.suse/b43-fix-a-lower-bounds-test.patch
