--- a/series.conf
+++ b/series.conf
@@ -5659,6 +5659,7 @@
 	patches.suse/ath6kl-use-eth_hw_addr_set.patch
 	patches.suse/wil6210-use-eth_hw_addr_set.patch
 	patches.suse/atmel-use-eth_hw_addr_set.patch
+	patches.suse/brcmfmac-prepare-for-const-netdev-dev_addr.patch
 	patches.suse/mt76-mt7921-fix-endianness-in-mt7921_mcu_tx_done_eve.patch
 	patches.suse/mt76-mt7915-fix-endianness-warning-in-mt7915_mac_add.patch
 	patches.suse/mt76-mt7921-fix-endianness-warning-in-mt7921_update_.patch
