--- a/series.conf
+++ b/series.conf
@@ -14232,6 +14232,7 @@
 	patches.suse/asm-generic-sections-refactor-memory_intersects.patch
 	patches.suse/HID-steam-Prevent-NULL-pointer-dereference-in-steam_.patch
 	patches.suse/HID-asus-ROG-NKey-Ignore-portion-of-0x5a-report.patch
+	patches.suse/HID-ishtp-hid-clientHID-ishtp-hid-client-Fix-comment.patch
 	patches.suse/HID-thrustmaster-Add-sparco-wheel-and-fix-array-leng.patch
 	patches.suse/HID-AMD_SFH-Add-a-DMI-quirk-entry-for-Chromebooks.patch
 	patches.suse/HID-add-Lenovo-Yoga-C630-battery-quirk.patch
