--- a/series.conf
+++ b/series.conf
@@ -14296,6 +14296,7 @@
 	patches.suse/drm-msm-dp-delete-DP_RECOVERED_CLOCK_OUT_EN-to-fix-t.patch
 	patches.suse/drm-msm-dsi-Fix-number-of-regulators-for-msm8996_dsi.patch
 	patches.suse/drm-msm-dsi-Fix-number-of-regulators-for-SDM660.patch
+	patches.suse/drm-msm-rd-Fix-FIFO-full-deadlock.patch
 	patches.suse/drm-i915-fix-null-pointer-dereference.patch
 	patches.suse/drm-i915-glk-ECS-Liva-Q2-needs-GLK-HDMI-port-timing-.patch
 	patches.suse/drm-i915-Skip-wm-ddb-readout-for-disabled-pipes.patch
