--- a/series.conf
+++ b/series.conf
@@ -14249,6 +14249,7 @@
 	patches.suse/bpf-Don-t-use-tnum_range-on-array-range-checking-for.patch
 	patches.suse/Bluetooth-L2CAP-Fix-build-errors-in-some-archs.patch
 	patches.suse/ieee802154-adf7242-defer-destroy_workqueue-call.patch
+	patches.suse/ieee802154-cc2520-add-rc-code-in-cc2520_tx.patch
 	patches.suse/ethernet-rocker-fix-sleep-in-atomic-context-bug-in-n.patch
 	patches.suse/kcm-fix-strp_init-order-and-cleanup.patch
 	patches.suse/platform-x86-pmc_atom-Fix-SLP_TYPx-bitfield-mask.patch
