--- a/series.conf
+++ b/series.conf
@@ -14319,6 +14319,7 @@
 	patches.suse/tty-n_gsm-avoid-call-of-sleeping-functions-from-atom.patch
 	patches.suse/Input-goodix-add-support-for-GT1158.patch
 	patches.suse/Input-rk805-pwrkey-fix-module-autoloading.patch
+	patches.suse/Input-goodix-add-compatible-string-for-GT1158.patch
 	patches.suse/Input-iforce-wake-up-after-clearing-IFORCE_XMIT_RUNN.patch
 	patches.suse/s390-hugetlb-fix-prepare_hugepage_range-check-for-2-GB-hugepages
 	patches.suse/xen-blkback-Advertise-feature-persistent-as-user-req.patch
