--- a/series.conf
+++ b/series.conf
@@ -14291,6 +14291,7 @@
 	patches.suse/driver-core-Don-t-probe-devices-after-bus_type.match.patch
 	patches.suse/drm-i915-reg-Fix-spelling-mistake-Unsupport-Unsuppor.patch
 	patches.suse/drm-i915-display-avoid-warnings-when-registering-dua.patch
+	patches.suse/drm-amd-amdgpu-skip-ucode-loading-if-ucode_size-0.patch
 	patches.suse/drm-msm-dsi-fix-the-inconsistent-indenting.patch
 	patches.suse/drm-msm-dp-delete-DP_RECOVERED_CLOCK_OUT_EN-to-fix-t.patch
 	patches.suse/drm-msm-dsi-Fix-number-of-regulators-for-msm8996_dsi.patch
