--- a/series.conf
+++ b/series.conf
@@ -14233,6 +14233,7 @@
 	patches.suse/HID-steam-Prevent-NULL-pointer-dereference-in-steam_.patch
 	patches.suse/HID-asus-ROG-NKey-Ignore-portion-of-0x5a-report.patch
 	patches.suse/HID-ishtp-hid-clientHID-ishtp-hid-client-Fix-comment.patch
+	patches.suse/hid-intel-ish-hid-ishtp-Fix-ishtp-client-sending-dis.patch
 	patches.suse/HID-thrustmaster-Add-sparco-wheel-and-fix-array-leng.patch
 	patches.suse/HID-AMD_SFH-Add-a-DMI-quirk-entry-for-Chromebooks.patch
 	patches.suse/HID-add-Lenovo-Yoga-C630-battery-quirk.patch
