--- a/series.conf
+++ b/series.conf
@@ -14383,6 +14383,7 @@
 	patches.suse/gpio-mpc8xxx-Fix-support-for-IRQ_TYPE_LEVEL_LOW-flow.patch
 	patches.suse/ALSA-hda-Fix-hang-at-HD-audio-codec-unbinding-due-to.patch
 	patches.suse/ALSA-hda-realtek-Re-arrange-quirk-table-entries.patch
+	patches.suse/ALSA-core-Fix-double-free-at-snd_card_new.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Fix-unsolicited-FLOGI-receive-handling-dur.patch
