--- a/series.conf
+++ b/series.conf
@@ -14384,6 +14384,7 @@
 	patches.suse/ALSA-hda-Fix-hang-at-HD-audio-codec-unbinding-due-to.patch
 	patches.suse/ALSA-hda-realtek-Re-arrange-quirk-table-entries.patch
 	patches.suse/ALSA-core-Fix-double-free-at-snd_card_new.patch
+	patches.suse/Revert-ALSA-usb-audio-Split-endpoint-setups-for-hw_p.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Fix-unsolicited-FLOGI-receive-handling-dur.patch
