--- a/series.conf
+++ b/series.conf
@@ -14382,6 +14382,7 @@
 	patches.suse/pinctrl-sunxi-Fix-name-for-A100-R_PIO.patch
 	patches.suse/gpio-mpc8xxx-Fix-support-for-IRQ_TYPE_LEVEL_LOW-flow.patch
 	patches.suse/ALSA-hda-Fix-hang-at-HD-audio-codec-unbinding-due-to.patch
+	patches.suse/ALSA-hda-realtek-Re-arrange-quirk-table-entries.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Fix-unsolicited-FLOGI-receive-handling-dur.patch
