--- a/series.conf
+++ b/series.conf
@@ -14253,6 +14253,7 @@
 	patches.suse/ethernet-rocker-fix-sleep-in-atomic-context-bug-in-n.patch
 	patches.suse/kcm-fix-strp_init-order-and-cleanup.patch
 	patches.suse/platform-x86-pmc_atom-Fix-SLP_TYPx-bitfield-mask.patch
+	patches.suse/platform-surface-aggregator_registry-Add-support-for-84b8e403435c.patch
 	patches.suse/musb-fix-USB_MUSB_TUSB6010-dependency.patch
 	patches.suse/usb-typec-tcpm-Return-ENOTSUPP-for-power-supply-prop.patch
 	patches.suse/usb-storage-Add-ignore-residue-quirk-for-NXP-PN7462A.patch
