--- a/series.conf
+++ b/series.conf
@@ -14331,6 +14331,7 @@
 	patches.suse/gpio-pca953x-Add-mutex_lock-for-regcache-sync-in-PM.patch
 	patches.suse/KVM-VMX-Heed-the-msr-argument-in-msr_write_intercept.patch
 	patches.suse/ARM-dts-imx6qdl-kontron-samx6i-remove-duplicated-nod.patch
+	patches.suse/ARM-dts-imx6qdl-kontron-samx6i-fix-spi-flash-compati.patch
 	patches.suse/soc-imx-gpcv2-Assert-reset-before-ungating-clock.patch
 	patches.suse/soc-brcmstb-pm-arm-Fix-refcount-leak-and-__iomem-lea.patch
 	patches.suse/soc-fsl-select-FSL_GUTS-driver-for-DPIO.patch
