--- a/series.conf
+++ b/series.conf
@@ -14383,6 +14383,7 @@
 	patches.suse/vfio-type1-Unpin-zero-pages.patch
 	patches.suse/drm-i915-Implement-WaEdpLinkRateDataReload.patch
 	patches.suse/nvme-tcp-fix-uaf-when-detecting-digest-errors.patch
+	patches.suse/scsi-mpt3sas-Fix-use-after-free-warning.patch
 	patches.suse/hwmon-tps23861-fix-byte-order-in-resistance-register.patch
 	patches.suse/dt-bindings-hwmon-mr75203-fix-intel-vm-map-property-.patch
 	patches.suse/hwmon-mr75203-fix-VM-sensor-allocation-when-intel-vm.patch
