--- a/series.conf
+++ b/series.conf
@@ -14373,6 +14373,7 @@
 	patches.suse/netfilter-nf_conntrack_irc-Fix-forged-IP-logic.patch
 	patches.suse/xen-netback-only-remove-hotplug-status-when-the-vif-.patch
 	patches.suse/wifi-iwlegacy-4965-corrected-fix-for-potential-off-b.patch
+	patches.suse/wifi-mac80211_hwsim-check-length-for-virtio-packets.patch
 	patches.suse/regulator-core-Clean-up-on-enable-failure.patch
 	patches.suse/tracing-hold-caller_addr-to-hardirq_-enable-disable-_ip.patch
 	patches.suse/ALSA-usb-audio-Inform-the-delayed-registration-more-.patch
