--- a/series.conf
+++ b/series.conf
@@ -14374,6 +14374,7 @@
 	patches.suse/xen-netback-only-remove-hotplug-status-when-the-vif-.patch
 	patches.suse/wifi-iwlegacy-4965-corrected-fix-for-potential-off-b.patch
 	patches.suse/wifi-mac80211_hwsim-check-length-for-virtio-packets.patch
+	patches.suse/net-usb-qmi_wwan-add-Quectel-RM520N.patch
 	patches.suse/regulator-core-Clean-up-on-enable-failure.patch
 	patches.suse/tracing-hold-caller_addr-to-hardirq_-enable-disable-_ip.patch
 	patches.suse/ALSA-usb-audio-Inform-the-delayed-registration-more-.patch
