--- a/series.conf
+++ b/series.conf
@@ -14392,6 +14392,7 @@
 	patches.suse/ASoC-mchp-spdiftx-Fix-clang-Wbitfield-constant-conve.patch
 	patches.suse/ASoC-nau8824-Fix-semaphore-unbalance-at-error-paths.patch
 	patches.suse/vfio-type1-Unpin-zero-pages.patch
+	patches.suse/drm-panfrost-devfreq-set-opp-to-the-recommended-one-.patch
 	patches.suse/drm-i915-Implement-WaEdpLinkRateDataReload.patch
 	patches.suse/nvme-tcp-fix-uaf-when-detecting-digest-errors.patch
 	patches.suse/scsi-mpt3sas-Fix-use-after-free-warning.patch
