--- a/series.conf
+++ b/series.conf
@@ -11724,6 +11724,7 @@
 	patches.suse/powerpc-perf-Fix-power10-event-alternatives.patch
 	patches.suse/sched-pelt-Fix-attach_entity_load_avg-corner-case.patch
 	patches.suse/0002-video-fbdev-udlfb-properly-check-endpoint-type.patch
+	patches.suse/video-fbdev-i740fb-Error-out-if-pixclock-equals-zero.patch
 	patches.suse/pinctrl-mediatek-moore-Fix-build-error.patch
 	patches.suse/pinctrl-stm32-Do-not-call-stm32_gpio_get-for-edge-tr.patch
 	patches.suse/pinctrl-samsung-fix-missing-GPIOLIB-on-ARM64-Exynos-.patch
