--- a/series.conf
+++ b/series.conf
@@ -14376,6 +14376,7 @@
 	patches.suse/wifi-mac80211_hwsim-check-length-for-virtio-packets.patch
 	patches.suse/net-usb-qmi_wwan-add-Quectel-RM520N.patch
 	patches.suse/regulator-core-Clean-up-on-enable-failure.patch
+	patches.suse/regulator-pfuze100-Fix-the-global-out-of-bounds-acce.patch
 	patches.suse/tracing-hold-caller_addr-to-hardirq_-enable-disable-_ip.patch
 	patches.suse/ALSA-usb-audio-Inform-the-delayed-registration-more-.patch
 	patches.suse/ALSA-usb-audio-Register-card-again-for-iface-over-de.patch
