--- a/series.conf
+++ b/series.conf
@@ -14446,6 +14446,7 @@
 	patches.suse/drm-mediatek-dsi-Add-atomic-destroy-duplicate-_state.patch
 	patches.suse/drm-mediatek-dsi-Move-mtk_dsi_stop-call-back-to-mtk_.patch
 	patches.suse/drm-panel-simple-Fix-innolux_g121i1_l01-bus_format.patch
+	patches.suse/usb-dwc3-core-leave-default-DMA-if-the-controller-do.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Fix-unsolicited-FLOGI-receive-handling-dur.patch
