--- a/series.conf
+++ b/series.conf
@@ -14444,6 +14444,7 @@
 	patches.suse/arm64-dts-rockchip-Set-RK3399-Gru-PCLK_EDP-to-24-MHz.patch
 	patches.suse/arm64-dts-rockchip-Remove-enable-active-low-from-rk3.patch
 	patches.suse/drm-mediatek-dsi-Add-atomic-destroy-duplicate-_state.patch
+	patches.suse/drm-mediatek-dsi-Move-mtk_dsi_stop-call-back-to-mtk_.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Fix-unsolicited-FLOGI-receive-handling-dur.patch
