--- a/series.conf
+++ b/series.conf
@@ -56547,6 +56547,7 @@
 	patches.suse/ALSA-hda-realtek-Fix-headset-mic-problem-for-a-HP-ma-4ba5c853d794.patch
 	patches.suse/ALSA-hda-realtek-Enable-the-headset-mic-on-a-Xiaomi--9b043a8f3864.patch
 	patches.suse/ima-Fix-a-potential-integer-overflow-in-ima_appraise.patch
+	patches.suse/ima-force-signature-verification-when-CONFIG_KEXEC_S.patch
 	patches.suse/ima-Fix-potential-memory-leak-in-ima_init_crypto.patch
 	patches.suse/net-sock-tracing-Fix-sock_exceed_buf_limit-not-to-dereference-stale-pointer.patch
 	patches.suse/sysctl-Fix-data-races-in-proc_dointvec.patch
