--- a/series.conf
+++ b/series.conf
@@ -35992,6 +35992,7 @@
 	patches.suse/sch_cake-don-t-call-diffserv-parsing-code-when-it-is.patch
 	patches.suse/sch_cake-fix-a-few-style-nits.patch
 	patches.suse/mm-compaction-make-capture-control-handling-safe-wrt-interrupts.patch
+	patches.suse/kexec-do-not-verify-the-signature-without-the-lockdo.patch
 	patches.suse/0001-ocfs2-avoid-inode-removal-while-nfsd-is-accessing-it.patch
 	patches.suse/0002-ocfs2-load-global_inode_alloc.patch
 	patches.suse/0003-ocfs2-fix-panic-on-nfs-server-over-ocfs2.patch
