--- a/series.conf
+++ b/series.conf
@@ -57069,6 +57069,7 @@
 	patches.suse/ALSA-usb-audio-Fix-an-out-of-bounds-bug-in-__snd_usb.patch
 	patches.suse/ALSA-emu10k1-Fix-out-of-bounds-access-in-snd_emu10k1.patch
 	patches.suse/scsi-mpt3sas-Fix-use-after-free-warning.patch
+	patches.suse/Revert-SUNRPC-Remove-unreachable-error-condition.patch
 	patches.suse/of-fdt-fix-off-by-one-error-in-unflatten_dt_nodes.patch
 	patches.suse/of-device-Fix-up-of_dma_configure_id-stub.patch
 	patches.suse/drm-meson-Correct-OSD1-global-alpha-value.patch
