--- a/series.conf
+++ b/series.conf
@@ -56945,6 +56945,7 @@
 	patches.suse/sunrpc-fix-expiry-of-auth-creds.patch
 	patches.suse/NFSv4-Fix-races-in-the-legacy-idmapper-upcall.patch
 	patches.suse/NFSv4.1-RECLAIM_COMPLETE-must-handle-EACCES.patch
+	patches.suse/SUNRPC-Reinitialise-the-backchannel-request-buffers-.patch
 	patches.suse/ceph-don-t-leak-snap_rwsem-in-handle_cap_grant.patch
 	patches.suse/ceph-don-t-truncate-file-in-atomic_open.patch
 	patches.suse/ACPI-property-Return-type-of-acpi_add_nondev_subnode.patch
