--- a/series.conf
+++ b/series.conf
@@ -3804,6 +3804,7 @@
 	patches.suse/perf-iostat-Use-system-wide-mode-if-the-target-cpu_l.patch
 	patches.suse/perf-iostat-Fix-Segmentation-fault-from-NULL-struct-.patch
 	patches.suse/mmc-renesas_sdhi-fix-regression-with-hard-reset-on-o.patch
+	patches.suse/vduse-missing-error-code-in-vduse_init.patch
 	patches.suse/fs-verity-fix-signed-integer-overflow-with-i_size-ne.patch
 	patches.suse/NIOS2-fix-kconfig-unmet-dependency-warning-for-SERIA.patch
 	patches.suse/NIOS2-setup.c-drop-unused-variable-dram_start.patch
