--- a/series.conf
+++ b/series.conf
@@ -8622,6 +8622,7 @@
 	patches.suse/net-mlx5-E-switch-Remove-vport-enabled-check.patch
 	patches.suse/net-mlx5-E-switch-Reuse-mlx5_eswitch_set_vport_mac.patch
 	patches.suse/net-mlx5-E-switch-move-offloads-mode-callbacks-to-of.patch
+	patches.suse/net-mlx5-E-switch-Enable-vport-QoS-on-demand.patch
 	patches.suse/Bluetooth-L2CAP-Fix-not-initializing-sk_peer_pid.patch
 	patches.suse/Bluetooth-btusb-Fix-application-of-sizeof-to-pointer.patch
 	patches.suse/Bluetooth-Fix-debugfs-entry-leak-in-hci_register_dev.patch
