--- a/series.conf
+++ b/series.conf
@@ -6040,6 +6040,7 @@
 	patches.suse/net-smc-Introduce-tracepoint-for-fallback
 	patches.suse/net-smc-Introduce-tracepoints-for-tx-and-rx-msg
 	patches.suse/net-smc-Introduce-tracepoint-for-smcr-link-down
+	patches.suse/netdevsim-fix-uninit-value-in-nsim_drv_configure_vfs.patch
 	patches.suse/net-vmxnet3-remove-multiple-false-checks-in-vmxnet3_.patch
 	patches.suse/bpftool-Remove-unused-includes-to-bpf-bpf_gen_intern.patch
 	patches.suse/bpftool-Remove-useless-include-to-perf-sys.h-from-ma.patch
