--- a/series.conf
+++ b/series.conf
@@ -8987,6 +8987,7 @@
 	patches.suse/Bluetooth-hci_qca-Stop-IBS-timer-during-BT-OFF.patch
 	patches.suse/Bluetooth-vhci-Set-HCI_QUIRK_VALID_LE_STATES.patch
 	patches.suse/igb-move-SDP-config-initialization-to-separate-funct.patch
+	patches.suse/igb-move-PEROUT-and-EXTTS-isr-logic-to-separate-func.patch
 	patches.suse/bpf-Do-not-WARN-in-bpf_warn_invalid_xdp_action.patch
 	patches.suse/bpf-Let-bpf_warn_invalid_xdp_action-report-more-info.patch
 	patches.suse/bpf-Introduce-composable-reg-ret-and-arg-types.patch
