--- a/series.conf
+++ b/series.conf
@@ -11570,6 +11570,7 @@
 	patches.suse/net-mlx5-CT-Create-smfs-dr-matchers-dynamically.patch
 	patches.suse/net-mlx5-Query-the-maximum-MCIA-register-read-size-f.patch
 	patches.suse/net-mlx5-Parse-module-mapping-using-mlx5_ifc.patch
+	patches.suse/net-mlx5e-Remove-overzealous-validations-in-netlink-.patch
 	patches.suse/ieee80211-add-EHT-1K-aggregation-definitions.patch
 	patches.suse/iwlwifi-mvm-Don-t-call-iwl_mvm_sta_from_mac80211-wit.patch
 	patches.suse/iwlwifi-mvm-offload-channel-switch-timing-to-FW.patch
