--- a/series.conf
+++ b/series.conf
@@ -11537,6 +11537,7 @@
 	patches.suse/ixgbevf-add-disable-link-state.patch
 	patches.suse/e1000e-Print-PHY-register-address-when-MDI-read-writ.patch
 	patches.suse/bnxt-revert-hastily-merged-uAPI-aberrations.patch
+	patches.suse/net-mlx5e-TC-Fix-use-after-free-in-mlx5e_clone_flow_.patch
 	patches.suse/can-isotp-set-default-value-for-N_As-to-50-micro-sec.patch
 	patches.suse/vxcan-enable-local-echo-for-sent-CAN-frames.patch
 	patches.suse/can-etas_es58x-es58x_fd_rx_event_msg-initialize-rx_e.patch
