--- a/series.conf
+++ b/series.conf
@@ -11542,6 +11542,7 @@
 	patches.suse/net-mlx5-Remove-redundant-notify-fail-on-give-pages.patch
 	patches.suse/net-mlx5-Remove-redundant-error-on-give-pages.patch
 	patches.suse/net-mlx5-Remove-redundant-error-on-reclaim-pages.patch
+	patches.suse/net-mlx5-Change-release_all_pages-cap-bit-location.patch
 	patches.suse/can-isotp-set-default-value-for-N_As-to-50-micro-sec.patch
 	patches.suse/vxcan-enable-local-echo-for-sent-CAN-frames.patch
 	patches.suse/can-etas_es58x-es58x_fd_rx_event_msg-initialize-rx_e.patch
