--- a/series.conf
+++ b/series.conf
@@ -11480,6 +11480,7 @@
 	patches.suse/octeontx2-pf-cn10k-add-support-for-new-ptp-timestamp.patch
 	patches.suse/octeontx2-af-cn10k-add-workaround-for-ptp-errata.patch
 	patches.suse/ixgbevf-clean-up-some-inconsistent-indenting.patch
+	patches.suse/ixgbe-Remove-non-inclusive-language.patch
 	patches.suse/sfc-default-config-to-1-channel-core-in-local-NUMA-n.patch
 	patches.suse/sfc-set-affinity-hints-in-local-NUMA-node-only.patch
 	patches.suse/tuntap-add-sanity-checks-about-msg_controllen-in-sen.patch
