--- a/series.conf
+++ b/series.conf
@@ -9761,6 +9761,7 @@
 	patches.suse/vdpa-mlx5-Fix-wrong-configuration-of-virtio_version_.patch
 	patches.suse/virtio_ring-mark-ring-unused-on-error.patch
 	patches.suse/vdpa-clean-up-get_config_size-ret-value-handling.patch
+	patches.suse/vdpa-Provide-interface-to-read-driver-features.patch
 	patches.suse/dmaengine-idxd-rework-descriptor-free-path-on-failur.patch
 	patches.suse/dmaengine-idxd-int-handle-management-refactoring.patch
 	patches.suse/dmaengine-idxd-move-interrupt-handle-assignment.patch
