--- a/series.conf
+++ b/series.conf
@@ -9767,6 +9767,7 @@
 	patches.suse/vdpa-Read-device-configuration-only-if-FEATURES_OK.patch
 	patches.suse/vdpa-Allow-to-configure-max-data-virtqueues.patch
 	patches.suse/vdpa-mlx5-Fix-config_attr_mask-assignment.patch
+	patches.suse/vdpa-mlx5-Support-configuring-max-data-virtqueue.patch
 	patches.suse/dmaengine-idxd-rework-descriptor-free-path-on-failur.patch
 	patches.suse/dmaengine-idxd-int-handle-management-refactoring.patch
 	patches.suse/dmaengine-idxd-move-interrupt-handle-assignment.patch
