--- a/series.conf
+++ b/series.conf
@@ -6495,6 +6495,7 @@
 	patches.suse/vdpa-Introduce-query-of-device-config-layout.patch
 	patches.suse/vdpa-Use-kernel-coding-style-for-structure-comments.patch
 	patches.suse/vdpa-Enable-user-to-set-mac-and-mtu-of-vdpa-device.patch
+	patches.suse/vdpa-mlx5-Fix-clearing-of-VIRTIO_NET_F_MAC-feature-b.patch
 	patches.suse/MAINTAINERS-add-an-entry-for-NXP-S32G-boards.patch
 	patches.suse/ARM-s3c-irq-s3c24xx-Fix-return-value-check-for-s3c24.patch
 	patches.suse/arm64-zynqmp-Do-not-duplicate-flash-partition-label-.patch
