--- a/series.conf
+++ b/series.conf
@@ -8698,6 +8698,7 @@
 	patches.suse/mlxsw-reg-Adjust-PPCNT-register-to-support-local-por.patch
 	patches.suse/mlxsw-Use-u16-for-local_port-field-instead-of-u8.patch
 	patches.suse/qed-Enhance-rammod-debug-prints-to-provide-pretty-de.patch
+	patches.suse/mlx5-fix-psample_sample_packet-link-error.patch
 	patches.suse/qed-enhance-tx-timeout-debug-info.patch
 	patches.suse/qed-esl-priv-flag-support-through-ethtool.patch
 	patches.suse/lib-add-reference-counting-tracking-infrastructure.patch
