--- a/series.conf
+++ b/series.conf
@@ -9769,6 +9769,7 @@
 	patches.suse/vdpa-mlx5-Fix-config_attr_mask-assignment.patch
 	patches.suse/vdpa-mlx5-Support-configuring-max-data-virtqueue.patch
 	patches.suse/vdpa-Add-support-for-returning-device-configuration-.patch
+	patches.suse/vdpa-mlx5-Restore-cur_num_vqs-in-case-of-failure-in-.patch
 	patches.suse/dmaengine-idxd-rework-descriptor-free-path-on-failur.patch
 	patches.suse/dmaengine-idxd-int-handle-management-refactoring.patch
 	patches.suse/dmaengine-idxd-move-interrupt-handle-assignment.patch
