--- a/series.conf
+++ b/series.conf
@@ -11315,6 +11315,7 @@
 	patches.suse/net-mlx5-Disable-SRIOV-before-PF-removal.patch
 	patches.suse/PCI-IOV-Add-pci_iov_get_pf_drvdata-to-allow-VF-reach.patch
 	patches.suse/net-mlx5-Expose-APIs-to-get-put-the-mlx5-core-device.patch
+	patches.suse/net-mlx5-Introduce-migration-bits-and-structures.patch
 	patches.suse/bpf-Fix-UAF-due-to-race-between-btf_try_get_module-a.patch
 	patches.suse/net-skbuff-add-size-metadata-to-skb_shared_info-for-.patch
 	patches.suse/xdp-introduce-flags-field-in-xdp_buff-xdp_frame.patch
