--- a/series.conf
+++ b/series.conf
@@ -8708,6 +8708,7 @@
 	patches.suse/net-mlx5e-TC-Remove-redundant-action-stack-var.patch
 	patches.suse/net-mlx5e-Remove-redundant-actions-arg-from-validate.patch
 	patches.suse/net-mlx5e-Remove-redundant-actions-arg-from-vlan-pus.patch
+	patches.suse/net-mlx5e-TC-Move-common-flow_action-checks-into-fun.patch
 	patches.suse/qed-enhance-tx-timeout-debug-info.patch
 	patches.suse/qed-esl-priv-flag-support-through-ethtool.patch
 	patches.suse/lib-add-reference-counting-tracking-infrastructure.patch
