--- a/series.conf
+++ b/series.conf
@@ -9034,6 +9034,7 @@
 	patches.suse/veth-Do-not-record-rx-queue-hint-in-veth_xmit.patch
 	patches.suse/mlxsw-Rename-virtual-router-flex-key-element.patch
 	patches.suse/mlxsw-Introduce-flex-key-elements-for-Spectrum-4.patch
+	patches.suse/mlxsw-spectrum_acl_bloom_filter-Reorder-functions-to.patch
 	patches.suse/net-tls-Fix-skb-memory-leak-when-running-kTLS-traffi.patch
 	patches.suse/net-mscc-ocelot-fix-incorrect-balancing-with-down-LA.patch
 	patches.suse/can-mcp251xfd-mcp251xfd_tef_obj_read-fix-typo-in-err.patch
